@@ -1,3 +1,9 @@
+1990-05-18  dickey@software.org
+
+	* src/ded.c:
+	modified 'edithead()' so it does the "right" thing when going
+	to an Apollo DSEE revision
+
 1990-05-16  dickey@software.org
 
 	* src/dedscan.c:
